[package]
name = "git-home"
version = "0.0.6"
edition = "2021"
description = "A dotfiles manager using git."
license = "GPL-3.0-or-later"
repository = "https://github.com/delta1024/git-home/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14.4"
